Dec 30, 2023: version 3.3.0

    * major change to build system: by Markus Mützel
    * ldl_version: added to return version of LDL

Sept 18, 2023: version 3.2.1

    * cmake update: add "None" build type, from Antonio Rojas, for Arch Linux

Sept 8, 2023: version 3.2.0

    * cmake updates: SuiteSparse:: namespace by Markus Muetzel

June 16, 2023: version 3.0.4

    * cmake build system updates: update by Markus Muetzel

Jan 17, 2023: version 3.0.3

    * SuiteSparse_config: now v7.0.0

Dec 9, 2022: version 3.0.2

    * minor change to build system

Nov 12, 2022: version 3.0.0

    * using CMake build system
    * integers: int (32-bit) and SuiteSparse_long (nominally 64-bit) replaced
        with int32_t and int64_t.

May 4, 2016: version 2.2.6

    * minor changes to Makefile

Apr 1, 2016: version 2.2.5

    * licensing simplified (no other change); refer to LDL/Doc/License.txt

Feb 1, 2016: version 2.2.4

    * update to Makefiles

Jan 30, 2016: version 2.2.3

    * modifications to Makefiles

Jan 1, 2016: version 2.2.2

    * modified Makefile to create shared libraries
        No change to C code except version number

Oct 10, 2014: version 2.2.1

    modified MATLAB/ldl_make.m.  No change to C code except version number.

July 31, 2013: version 2.2.0

    * changed malloc and printf pointers to use SuiteSparse_config

Jun 1, 2012: version 2.1.0

    * UFconfig replaced with SuiteSparse_config

Dec 7, 2011: version 2.0.4

    * fixed the Makefile to better align with CFLAGS and other standards
    * modified the demo program to check for errors in input test matrices

Jan 25, 2011: version 2.0.3

    * minor fix to "make install"

Nov 30, 2009: version 2.0.2

    * added "make install" and "make uninstall"

May 31, 2007: version 2.0.0

    * C-callable 64-bit version added

    * ported to 64-bit MATLAB

    * subdirectories added (Source/, Include/, Lib/, Demo/, Doc/, MATLAB/)

Dec 12, 2006: version 1.3.4

    * minor MATLAB cleanup
