@@ -1,3 +1,7 @@
+Jan XX, 2024: version 3.3.1     FIXME for 7.5.0
+
+    * minor updates to build system
+
 Dec 30, 2023: version 3.3.0
 
     * major change to build system: by Markus Mützel
